--- a/financial_kg/requirements.txt
+++ b/financial_kg/requirements.txt
@@ -1,17 +1,51 @@
-aiosqlite==0.21.0
+# Web框架和服务器
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+
+# 数据库和ORM
+sqlalchemy==2.0.23
+aiosqlite==0.21.0
+alembic==1.13.1
+
+# HTTP客户端和爬虫
 aiohttp==3.9.1
-aiofiles==23.2.0
+httpx==0.25.2
 beautifulsoup4==4.12.2
+lxml==4.9.3
+readability-lxml==0.8.1
+
+# AI和NLP
+langchain==0.1.0
+langchain-openai==0.0.2
+langgraph==0.0.26
+openai==1.6.1
+tiktoken==0.5.2
+
+# 数据处理和验证
 pydantic==2.5.0
 pydantic-core==2.14.6
-httpx==0.25.2
 python-multipart==0.0.6
 jinja2==3.1.2
+
+# 任务调度
+apscheduler==3.10.4
+
+# 文件处理
+aiofiles==23.2.0
+
+# 认证和安全
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+
+# 配置管理
 python-dotenv==1.0.0
+
+# 测试
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
+
+# 工具库
+loguru==0.7.2
+typer==0.9.0
+rich==13.7.0
