--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ apscheduler==3.10.4
 
 # 文件处理
 aiofiles==23.2.0
+greenlet==3.2.4
 
 # 认证和安全
 python-jose[cryptography]==3.3.0
@@ -49,3 +50,4 @@ pytest-cov==4.1.0
 loguru==0.7.2
 typer==0.9.0
 rich==13.7.0
+PyYAML==6.0.1
