--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ llm:
   model: "glm-4.5-air"
   api_key: "9f0867c6ca528cfb0faa3ea170411448.YpruqxYPsTnpyrjM"  # 通过环境变量 OPENAI_API_KEY 设置
   base_url: "https://open.bigmodel.cn/api/paas/v4/"  # 可选，通过环境变量 OPENAI_BASE_URL 设置
-  timeout: 30
+  timeout: 120  # 超时时间设置为120秒
   max_retries: 3
   temperature: 0.1
   max_tokens: 2048
