feat: 添加知识图谱查询服务
- 新增KGQueryService：前端友好的知识图谱数据查询服务
- 支持实体列表查询、关系查询、实体网络遍历
- 实现实体-新闻关联查询、多实体共同新闻分析
- 添加FastAPI路由集成示例
- 更新.gitignore忽略Chroma存储文件
- 提供详细文档和使用指南

--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,10 @@ logs/
 
 *.db
 data/chroma*
+
+# Chroma vector database storage
+data/test_real_chroma/
+data/chroma*/
+*.bin
+chroma.sqlite3
+chroma.sqlite3-journal
