修复日志记录问题，添加详细日志到process_content链路，优化前端展示，修复新闻与实体关联，创建SDK和远程向量搜索支持

--- a/config.yaml
+++ b/config.yaml
@@ -83,7 +83,7 @@ logging:
       propagate: false
   root:
     level: "INFO"
-    handlers: ["console"]
+    handlers: ["console", "file"]
 
 # 新闻处理配置
 news_processing:
